--- a/src/app/gellary/gellary.component.html
+++ b/src/app/gellary/gellary.component.html
@@ -1,3 +1,52 @@
+<div class="container-fluid content" id="con4" #content>
+  <h2 class="text-center">Gellary</h2>
+  <div class="row">
+    <div #content class="col-12 col-md-4 content">
+      <div class="box1 content" #content>
+        <div class="names">
+          <p>GAMBARO</p>
+          <h4>Face Care</h4>
+          <button class="btn">view Collections</button>
+        </div>
+      </div>
+      <div class="box2">
+        <div class="names2">
+          <p>MARIEKE</p>
+          <h4>Hair Care</h4>
+          <button class="btn">view Collections</button>
+        </div>
+      </div>
+    </div>
+
+    <div #content class="col-12 col-md-4 content">
+      <div class="box3">
+        <div class="name3">
+          <p>QUEENS</p>
+          <h4>Body Care</h4>
+          <button class="btn">view Collections</button>
+        </div>
+      </div>
+    </div>
+
+    <div #content class="col-12 col-md-4 content">
+      <div class="box4">
+        <div class="names2">
+          <p>LECIA</p>
+          <h4>Leg Care</h4>
+          <button class="btn">view Collections</button>
+        </div>
+      </div>
+      <div class="box5">
+        <div class="names">
+          <p>ISELA</p>
+          <h4>Fragrance</h4>
+          <button class="btn">view Collections</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="container-fluid" id="con5">
   <div class="row">
     <div #content class="col-12 col-md-7 content">
