--- a/src/app/orderproduct/orderproduct.component.html
+++ b/src/app/orderproduct/orderproduct.component.html
@@ -7,10 +7,15 @@
     <div class="col">
       <div class="details">
         <p>
+          product name:
           <span>{{ product.pname }}</span>
         </p>
-        <p><span>Quantity:</span>{{ quantity }}</p>
-        <p><span>Total price:</span>{{ product.price * quantity }}/-</p>
+        <p>
+          Quantity:<span> {{ quantity }}</span>
+        </p>
+        <p>
+          Total price:<span> {{ product.price * quantity }}/-</span>
+        </p>
         <p>You have saved 480/-</p>
       </div>
     </div>
