--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid" id="con10">
   <footer>
-    <div class="row text-center text-md-start">
+    <div class="row">
       <div class="col-12 col-md-4 mb-4 mb-md-0">
-        <h3>We are social at</h3>
-        <div class="box d-flex justify-content-center justify-content-md-start">
+        <h3 class="text-center">We are social at</h3>
+        <div class="box d-flex justify-content-center">
           <i class="bi bi-instagram"></i>
           <i class="bi bi-whatsapp"></i>
           <i class="bi bi-linkedin"></i>
@@ -13,20 +13,22 @@
       <div class="col-12 col-md-4 mb-4 mb-md-0">
         <h1 class="text-center">GlowGrove</h1>
       </div>
-      <div class="col-12 col-md-4 d-flex justify-content-end">
-        <h3 class="">Contact</h3>
+      <div class="col-12 col-md-4">
+        <h3 class="text-center">Contact</h3>
         <table class="mx-auto mx-md-0">
           <tr>
             <td><i class="bi bi-people-fill"></i></td>
-            <td>+91 7036582951</td>
+            <td class="text-center">+91 7036582951</td>
           </tr>
           <tr>
             <td><i class="bi bi-envelope-fill"></i></td>
-            <td>info@example.com</td>
+            <td class="text-center">infoexample.com</td>
           </tr>
           <tr>
             <td><i class="bi bi-geo-fill"></i></td>
-            <td>No: 58 A, East Madison Street, Baltimore, MD, USA 4508</td>
+            <td class="text-center">
+              No: 58 A, East Madison Street, Baltimore, MD, USA 4508
+            </td>
           </tr>
         </table>
       </div>
