--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,6 @@
 <div class="container d-flex justify-content-center">
   <div class="box" *ngIf="islogin">
+    <i class="bi bi-arrow-left" routerLink="/home"></i>
     <h2 class="text-center">Connect with Care</h2>
     <div class="form">
       <input type="text" class="form-control my-3" placeholder="username" />
