--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -21,13 +21,21 @@
     >
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" routerLink="home" (click)="closeNav()">Home</a>
+          <a
+            class="nav-link"
+            fragment="home"
+            routerLink="home"
+            (click)="scrollToSection('home')"
+            (click)="closeNav()"
+            >Home</a
+          >
         </li>
         <li class="nav-item">
           <a
             class="nav-link"
-            routerLink="/"
+            routerLink="home"
             fragment="about"
+            (click)="scrollToSection('about')"
             (click)="closeNav()"
             >About</a
           >
@@ -38,28 +46,27 @@
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/home" (click)="closeNav()"
+          <a
+            class="nav-link"
+            routerLink="/home"
+            (click)="scrollToSection('gellary')"
+            (click)="closeNav()"
             >Gallery</a
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/home" (click)="closeNav()">Blog</a>
+          <a
+            class="nav-link"
+            routerLink="/home"
+            (click)="scrollToSection('blog')"
+            (click)="closeNav()"
+            >Blog</a
+          >
         </li>
       </ul>
     </div>
     <div class="collapse navbar-collapse justify-content-end">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <i class="bi bi-bag"></i>
-        </li>
-
-        <li class="nav-item">
-          <i class="bi bi-person" routerLink="/user/login"></i>
-        </li>
-        <li class="nav-item">
-          <i class="bi bi-heart"></i>
-        </li>
-      </ul>
+      <i class="bi bi-person" routerLink="/user/login"></i>
     </div>
   </div>
 </nav>
