--- a/src/app/newstore/newstore.component.html
+++ b/src/app/newstore/newstore.component.html
@@ -38,7 +38,7 @@
                   </div>
                 </div>
                 <div class="card">
-                  <img src="../assets/soap.jpg" alt="" />
+                  <img src="../assets/shop-1.webp" alt="" />
                   <div class="details">
                     <h5>Beauty Bar</h5>
                     <i class="bi bi-star-fill"></i>
@@ -51,51 +51,7 @@
                   </div>
                 </div>
                 <div class="card">
-                  <img src="../assets/soap.jpg" alt="" />
-                  <div class="details">
-                    <h5>Beauty Bar</h5>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star"></i>
-
-                    <div class="price">570/-</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div #content class="d-none d-md-block col-md-4 content">
-              <div class="box">
-                <h3>Body Essentials</h3>
-                <div class="card">
-                  <img src="../assets/soap.jpg" alt="" />
-                  <div class="details">
-                    <h5>Beauty Bar</h5>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star"></i>
-
-                    <div class="price">570/-</div>
-                  </div>
-                </div>
-                <div class="card">
-                  <img src="../assets/soap.jpg" alt="" />
-                  <div class="details">
-                    <h5>Beauty Bar</h5>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star"></i>
-
-                    <div class="price">570/-</div>
-                  </div>
-                </div>
-                <div class="card">
-                  <img src="../assets/soap.jpg" alt="" />
+                  <img src="../assets/shop-20.webp" alt="" />
                   <div class="details">
                     <h5>Beauty Bar</h5>
                     <i class="bi bi-star-fill"></i>
@@ -111,9 +67,9 @@
             </div>
             <div #content class="d-none d-md-block col-md-4 content">
               <div class="box">
-                <h3>Body Essentials</h3>
+                <h3>Fragrance​</h3>
                 <div class="card">
-                  <img src="../assets/soap.jpg" alt="" />
+                  <img src="../assets/shop-23.webp" alt="" />
                   <div class="details">
                     <h5>Beauty Bar</h5>
                     <i class="bi bi-star-fill"></i>
@@ -126,7 +82,7 @@
                   </div>
                 </div>
                 <div class="card">
-                  <img src="../assets/soap.jpg" alt="" />
+                  <img src="../assets/shop-24.webp" alt="" />
                   <div class="details">
                     <h5>Beauty Bar</h5>
                     <i class="bi bi-star-fill"></i>
@@ -139,7 +95,51 @@
                   </div>
                 </div>
                 <div class="card">
-                  <img src="../assets/soap.jpg" alt="" />
+                  <img src="../assets/shop2.webp" alt="" />
+                  <div class="details">
+                    <h5>Beauty Bar</h5>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+
+                    <div class="price">570/-</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div #content class="d-none d-md-block col-md-4 content">
+              <div class="box">
+                <h3>Hair care</h3>
+                <div class="card">
+                  <img src="../assets/shop3.webp" alt="" />
+                  <div class="details">
+                    <h5>Beauty Bar</h5>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+
+                    <div class="price">570/-</div>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="../assets/shop-24.webp" alt="" />
+                  <div class="details">
+                    <h5>Beauty Bar</h5>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+
+                    <div class="price">570/-</div>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="../assets/shop-20.webp" alt="" />
                   <div class="details">
                     <h5>Beauty Bar</h5>
                     <i class="bi bi-star-fill"></i>
@@ -155,11 +155,12 @@
             </div>
           </div>
         </div>
+
         <div class="carousel-item">
           <div class="row">
             <div #content class="col-12 col-md-4 content">
               <div class="box">
-                <h3>Body Essentials</h3>
+                <h3>Fragrance​s</h3>
                 <div class="card">
                   <img src="../assets/soap.jpg" alt="" />
                   <div class="details">
@@ -203,7 +204,7 @@
             </div>
             <div #content class="d-none d-md-block col-md-4 content">
               <div class="box">
-                <h3>Body Essentials</h3>
+                <h3>Moisturizer</h3>
                 <div class="card">
                   <img src="../assets/soap.jpg" alt="" />
                   <div class="details">
